<resources>
    <string name="app_name">WallU-Tad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">¡Bienvenido, U-Tecky!</string>
    <string name="login_mail_hint">Dirección de e-mail</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button_description">Acceder a WallU-Tad</string>
    <string name="login_sign_up_button_description">Todavía no tengo cuenta</string>
    <string name="login_sign_up_firebase_error">Ha ocurrido un error al acreditarte en Firebase</string>

    <string name="sign_up_title">Súmate a Wallu-Tad</string>
    <string name="sign_up_name_hint">Nombre y apellidos</string>
    <string name="sign_up_user_name_hint">Nombre de usuario</string>
    <string name="sign_up_mail_hint">Dirección de e-mail</string>
    <string name="sign_up_phone">Número de teléfono (incluyendo prefijo)</string>
    <string name="sign_up_password_hint">Contraseña</string>
    <string name="sign_up_password_description">La contraseña debe contener al menos 6 caracteres.</string>
    <string name="sign_up_button_description">Crear una cuenta</string>
    <string name="sign_up_name_taken_error">Este nombre no se encuentra disponible</string>
    <string name="sign_up_failed_error">Ha ocurrido un fallo en el registro</string>
    <string name="sign_up_invalid_data_error">Los datos introducidos no son válidos</string>
    <string name="sign_up_saved_user_message">¡Bienvenido a WallU-Tad! Ya casi estás dentro.</string>

    <string name="sms_auth_title">Te hemos enviado un SMS</string>
    <string name="sms_auth_description">Por favor, introduce el código que has recibido</string>
    <string name="sms_auth_hint">Código</string>
    <string name="sms_auth_button">Confirmar código</string>
    <string name="sms_auth_resend_button">Reenviar SMS</string>

    <string name="feed_title">Producto cerca de ti</string>

    <string name="advertisement_detail_free_shipping_title">Envío disponible</string>
    <string name="advertisement_detail_shipping_title">Entrega en 3-7 días</string>
    <string name="advertisement_detail_shipping_pick_up_description">En un punto de recogida <b>desde 7,50€</b></string>
    <string name="advertisement_detail_shipping_home_description">En la puerta de casa desde <b>desde 11,00€</b></string>
    <string name="advertisement_detail_contact_message">El vendedor no ha propocionado un nº de teléfono.</string>

    <string name="new_advertisement_title">En la puerta de casa desde <b>desde 11,00€</b></string>
    <string name="error_message_empty_fields">Por favor, rellena todos los campos.</string>

    <string name="home_bottom_menu_home_title">Feed</string>
    <string name="home_bottom_menu_new_advertisement_title">Crear Anuncio</string>
    <string name="home_bottom_menu_profile_title">Cuenta</string>

    <string name="home_news_data">Encuentra lo que buscas dentro del campus y queda con los vendedores en el recreo</string>
    <string name="home_empty_list">¡Crea el primer anuncio de la app!</string>

    <string name="new_add_title">Detalles del producto</string>
    <string name="new_add_details_subtitle">Detalles específicos del producto</string>
    <string name="new_add_subtitle">Información básica</string>
    <string name="new_add_select_image_description">Seleccionar imágen</string>
    <string name="new_add_title_hint">Título</string>
    <string name="new_add_details_hint">Cuéntanos algo más sobre el producto*</string>
    <string name="new_add_price_hint">Precio</string>

    <string name="profile_log_out_button">Cerrar sesión</string>
    <string name="profile_delete_account_button">Borrar cuenta</string>

    <string name="new_add_button">Publicar anuncio</string>

    <string name="detail_pick_up_available">Recogida en el campus disponible</string>
    <string name="detail_status">Como nuevo</string>
    <string name="detail_seller">Vendido por: %s</string>
    <string name="detail_contact_button">Contactar con el vendedor</string>

    <string name="new_advertisement_permission_dialog_title">El permiso es necesario</string>
    <string name="new_advertisement_permission_dialog_message">Es necesario para poder cargar tu imagen de tu proyecto.</string>
    <string name="new_advertisement_permission_dialog_positive_button">Okay</string>
    <string name="new_advertisement_permission_dialog_negative_button">Denegar</string>
    <string name="new_advertisement_denied_permission">El permiso ha sido denegado</string>
    <string name="new_advertisement_no_select_image_error">No has seleccionado ninguna imagen</string>


    <string name="account_delete_dialog_title">Estás a punto de eliminar tu cuenta</string>
    <string name="account_delete_dialog_message">¿Estás seguro?</string>
    <string name="account_delete_positive_button">Sí, quiero eliminar mi cuenta</string>
    <string name="account_delete_dialog_negative_button">No, lo he pensado mejor</string>


</resources>