<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AdvertisementDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/bg_gradient_dark_to_transparent"
        app:layout_collapseMode="parallax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="4dp"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_wallutad_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <LinearLayout
                android:id="@+id/ll_pick_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_theme_light_surfaceTint"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_product">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_pick_up_available"
                    android:textColor="@color/md_theme_light_surface" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_shipping"
                    app:tint="@color/md_theme_light_surface" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textAppearance="@style/PriceItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_pick_up"
                tools:text="0,00€" />

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ViewSubTitle"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_price"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_price"
                tools:text="Silla gamer" />

            <TextView
                android:id="@+id/tv_detail_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_status"
                android:textAppearance="@style/SmallDescription"
                android:textColor="@color/md_theme_light_outline"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@id/tv_detail_status"
                app:layout_constraintStart_toStartOf="@id/tv_detail_status"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_status" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_news"
                android:src="@drawable/ic_emoji"
                app:contentPadding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.Circle"
                app:tint="@color/md_theme_light_surface" />

            <TextView
                android:id="@+id/tv_seller_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detail_seller"
                android:textAppearance="@style/ViewSubTitle"
                app:layout_constraintBottom_toBottomOf="@+id/iv_user_detail"
                app:layout_constraintEnd_toEndOf="@id/divider"
                app:layout_constraintStart_toEndOf="@id/iv_user_detail"
                app:layout_constraintTop_toTopOf="@+id/iv_user_detail" />

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_seller_name"
                app:layout_constraintStart_toStartOf="@+id/iv_user_detail"
                app:layout_constraintTop_toBottomOf="@+id/iv_user_detail"
                tools:text="Esto es un ejemplo de descripción del anuncio" />

            <Button
                android:id="@+id/btn_contact_detail"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/detail_contact_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_description_detail"
                app:layout_constraintStart_toStartOf="@+id/tv_description_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_detail"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>